--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.6",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.5.9",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.10",
     "pg": "^8.0.3",
@@ -33,6 +34,7 @@
     "@types/cors": "^2.8.6",
     "@types/jest": "^26.0.0",
     "@types/jsonwebtoken": "^8.3.9",
+    "@types/mongodb": "^3.5.25",
     "@types/nodemailer": "^6.4.0",
     "@typescript-eslint/eslint-plugin": "^2.30.0",
     "@typescript-eslint/parser": "^2.30.0",
