--- a/ormconfig.json
+++ b/ormconfig.json
@@ -23,7 +23,7 @@
   "host": "localhost",
   "port": 27017,
   "database": "gobarber",
-  "useUniifiedTopology": true,
+  "useUnifiedTopology": true,
   "entities": [
     "./src/modules/**/infra/typeorm/schemas/*.ts"
   ]
