--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/express": "^4.17.6",
     "@types/multer": "^1.4.3",
     "bcryptjs": "^2.4.3",
+    "celebrate": "^12.2.0",
     "cors": "^2.8.5",
     "date-fns": "^2.12.0",
     "express": "^4.17.1",
@@ -32,17 +33,18 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.6",
+    "@types/hapi__joi": "^17.1.4",
     "@types/jest": "^26.0.0",
     "@types/jsonwebtoken": "^8.3.9",
     "@types/mongodb": "^3.5.25",
     "@types/nodemailer": "^6.4.0",
-    "@typescript-eslint/eslint-plugin": "^2.30.0",
-    "@typescript-eslint/parser": "^2.30.0",
+    "@typescript-eslint/eslint-plugin": "^3.8.0",
+    "@typescript-eslint/parser": "^3.8.0",
     "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-import-resolver-typescript": "^2.0.0",
-    "eslint-plugin-import": "2.20.1",
+    "eslint-plugin-import": "2.21.2",
     "eslint-plugin-prettier": "^3.1.3",
     "jest": "^26.0.1",
     "prettier": "^2.0.5",
